<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HipotecaFormulario" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/label_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nombre_alojamiento"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_nombre"
            android:ems="10" />

        <TextView
            android:id="@+id/label_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/nombre" />

        <EditText
            android:id="@+id/categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_categoria"
            android:ems="10"
            android:inputType="textMultiLine">
        </EditText>

        <TextView
            android:id="@+id/label_habitaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_habitaciones"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/categoria"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/habitaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_habitaciones"
            android:ems="10">
        </EditText>

        <TextView
            android:id="@+id/label_plazas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_plazas"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/habitaciones"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/plazas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_plazas"
            android:ems="10">
        </EditText>

        <TextView
            android:id="@+id/label_domicilio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_domicilio"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/plazas"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/domicilio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_domicilio"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <TextView
            android:id="@+id/label_barrio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_barrio"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/domicilio"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/barrio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_barrio"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <TextView
            android:id="@+id/label_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_telefono"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/barrio"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_telefono"
            android:ems="10"
            android:inputType="phone" >
        </EditText>

        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/telefono"
            android:layout_marginTop="20dp"
            android:text="@string/label_email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_email"
            android:ems="10"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/label_longitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_longitud"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/email"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/longitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_longitud"
            android:ems="10"
            android:inputType="textMultiLine">
        </EditText>
        <TextView
            android:id="@+id/label_latitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_latitud"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/longitud"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/latitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_latitud"
            android:ems="10"
            android:inputType="textMultiLine">
        </EditText>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imagen"
            android:layout_below="@+id/latitud"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/foto"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ver en mapa"
            android:id="@+id/btnMapa"
            android:layout_below="@+id/imagen" />


    </RelativeLayout>



</ScrollView>